Hazelcast experiment WIP