@@ -1,19 +1,22 @@
 package stroom.cluster.mock;
 
+import stroom.cluster.api.ClusterMember;
 import stroom.cluster.api.ClusterRole;
 import stroom.cluster.api.ClusterService;
-import stroom.cluster.api.NodeInfo;
 
+import java.util.Collections;
+import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import javax.inject.Inject;
 
 public class MockClusterService implements ClusterService {
 
-    private final NodeInfo nodeInfo;
+    private final ClusterMember clusterMember;
 
     @Inject
-    public MockClusterService(final NodeInfo nodeInfo) {
-        this.nodeInfo = nodeInfo;
+    public MockClusterService() {
+        this.clusterMember = new ClusterMember(UUID.randomUUID().toString());
     }
 
     @Override
@@ -37,17 +40,27 @@ public class MockClusterService implements ClusterService {
     }
 
     @Override
-    public String getLeader() {
-        return nodeInfo.getThisNodeName();
+    public ClusterMember getLeader() {
+        return clusterMember;
     }
 
     @Override
-    public String getLocal() {
-        return nodeInfo.getThisNodeName();
+    public ClusterMember getLocal() {
+        return clusterMember;
     }
 
     @Override
-    public Set<String> getMembers() {
-        return Set.of(nodeInfo.getThisNodeName());
+    public Set<ClusterMember> getMembers() {
+        return Collections.singleton(clusterMember);
+    }
+
+    @Override
+    public ClusterMember getMemberForOldNodeName(final String oldNodeName) {
+        return clusterMember;
+    }
+
+    @Override
+    public Optional<ClusterMember> getOptionalMemberForOldNodeName(final String oldNodeName) {
+        return Optional.of(clusterMember);
     }
 }
